<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notes</string>
    <string name="new_string">New</string>
    <string name="open_string">Open</string>
    <string name="save_string">Save</string>

    <string name="YES">Yes</string>
    <string name="NO">No</string>

    <!-- CreateShortcut -->
    <string name="promptForShortcutTitle">
        "Install Desktop Query"
    </string>
    <string name="promptForShortcut">
        Do you want a desktop shortcut created for \"%1$s\"?"
    </string>

    <string name="open_file">Open File</string>
    <string name="new_file">New File</string>
    <string name="save_file">Save File</string>

    <string name="build_info">Build Info…</string>
    <string name="file_properties_format" tools:ignore="PluralsCandidate"><![CDATA[
        <html><center>
        <font color=\"#%1$06x\">
        File name: \"%2$s\"
        <br>Size: %3$d bytes
        <br>Modified: %4$s
        <br>Writable: %5$b
        </font></center>
        </html>
    ]]>
    </string>
    <string name="file_properties">File Properties</string>
    <string name="save_as_file">Save File As</string>
    <string name="dark_theme">Select Dark Theme</string>
    <string name="light_theme">Select Light Theme</string>

    <string name="read_write_toast_fmt">%1$s: %2$s: \"%3$s\"\n%4$d bytes</string>
    <string name="wrote">Wrote</string>
    <string name="read">Read</string>

    <string name="usage">Usage</string>
    <string name="save_uri_failed">Save URI to %1$s FAILED.</string>

    <string name="is_writable">🔓 Read/Write</string>
    <string name="is_read_only">🔒 Read Only</string>
    <string name="system_read_only">❌ Read Only</string>
    <string name="is_write_protected">Sorry. %1$s is write protected.</string>

    <!-- For select font size. -->
    <string name="sample_text">The quick brown fox\nよろしく！</string>
    <string name="select_font_size">Select font size</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>

    <!-- for abort-overwrite dialog. -->
    <string name="discard_file_changes">Discard changes to \"%1$s\"?</string>
    <string name="overwrite_aborted">Overwrite aborted</string>

    <string name="share_file">Share File</string>
    <string name="sharing_file_named">Notes:file "%1$s"</string>
    <string name="sharing_failed">Sharing Failed: error %1$s</string>
    <string name="send_file_as_attachment">Send file as an attachment?</string>
    <string name="search">Search for</string>

    <string-array name="matches_strings">
        <item>No matches for "%1$s"</item>
        <item>One match for "%1$s"</item>
        <item>Match %1$d of %2$d matches for "%2$s"</item>
    </string-array>

</resources>
