<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/open_file_item"
        android:title="@string/open_file"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/new_file_item"
        android:title="@string/new_file"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save_file_item"
        android:title="@string/save_file"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/save_as_file_item"
        android:title="@string/save_as_file"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/write_protect_file_item"
        android:title="@string/save_as_file"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/file_properties_item"
        android:title="@string/file_properties"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/select_display_theme"
        android:title="@string/dark_theme"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/usage_item"
        android:title="@string/usage"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/build_info_item"
        android:title="@string/build_info"
        app:showAsAction="never"
        />

</menu>